--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,6 +173,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-analytics'
+   // implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
 
   //  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
