--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -206,10 +206,6 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" />
 
-        <activity
-            android:name=".ScanQRCodeForEssentialActivity"
-            android:screenOrientation="portrait"
-            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -448,6 +444,17 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".PaymentSummaryActivity"
+            android:screenOrientation="portrait"
+            android:exported="false" />
+
+        <activity
+            android:name=".ScanQRCodeForEssentialActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".EnterReferenceCodeActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
 
         <receiver
@@ -473,6 +480,10 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
+
+
+
+
     </application>
 
 </manifest>
